@@ -1,17 +1,9 @@
 package cn.cerc.db.dao;
 
-import cn.cerc.core.ClassData;
-import cn.cerc.core.ClassFactory;
-import cn.cerc.core.SqlText;
-import cn.cerc.core.Utils;
-import cn.cerc.db.mysql.UpdateMode;
-import cn.cerc.db.redis.JedisFactory;
-import lombok.extern.slf4j.Slf4j;
-import redis.clients.jedis.Jedis;
-
 import java.io.IOException;
 import java.lang.Thread.State;
 import java.lang.reflect.Field;
+import java.lang.reflect.InvocationTargetException;
 import java.lang.reflect.ParameterizedType;
 import java.sql.ResultSet;
 import java.sql.ResultSetMetaData;
@@ -22,8 +14,19 @@ import java.util.Map;
 import java.util.Set;
 import java.util.concurrent.ConcurrentHashMap;
 
-@Slf4j
+import org.slf4j.Logger;
+import org.slf4j.LoggerFactory;
+
+import cn.cerc.core.ClassData;
+import cn.cerc.core.ClassFactory;
+import cn.cerc.core.SqlText;
+import cn.cerc.core.Utils;
+import cn.cerc.db.mysql.UpdateMode;
+import cn.cerc.db.redis.JedisFactory;
+import redis.clients.jedis.Jedis;
+
 public abstract class BigTable<T extends BigRecord> {
+    private static final Logger log = LoggerFactory.getLogger(BigTable.class);
 
     // 有变动待保存数据，保存完后会自动清除
     protected Map<T, T> updateList = new ConcurrentHashMap<>();
@@ -52,13 +55,13 @@ public abstract class BigTable<T extends BigRecord> {
     public static Object cloneObject(Object obj1) {
         Object obj2 = null;
         try {
-            obj2 = obj1.getClass().newInstance();
+            obj2 = obj1.getClass().getDeclaredConstructor().newInstance();
             Map<String, Object> items = new LinkedHashMap<>();
             BigOperator.copy(obj1, (key, value) -> {
                 items.put(key, value);
             });
             BigOperator.copy(items, obj2);
-        } catch (InstantiationException | IllegalAccessException e) {
+        } catch (InstantiationException | IllegalAccessException | IllegalArgumentException | InvocationTargetException | NoSuchMethodException | SecurityException e) {
             throw new RuntimeException(e);
         }
         return obj2;
@@ -183,7 +186,7 @@ public abstract class BigTable<T extends BigRecord> {
                         items.put(key, rs.getObject(key));
                     }
                     try {
-                        T obj = clazz.newInstance();
+                        T obj = clazz.getDeclaredConstructor().newInstance();
                         BigOperator.copy(items, obj);
                         this.put(obj);
                     } catch (InstantiationException | IllegalAccessException e) {
